--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@arcjet/inspect": "^1.1.0",
     "@arcjet/node": "^1.1.0",
-    "bcryptjs": "^3.0.3",
+    "@clerk/express": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.6",
     "debug": "~2.6.9",
     "dotenv": "^17.2.3",
-    "express": "~4.16.1",
-    "jsonwebtoken": "^9.0.3",
+    "express": "^4.22.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
     "morgan": "~1.9.1"
